--- a/views/checker.twig
+++ b/views/checker.twig
@@ -2,9 +2,32 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <title>ScrabbleScore</title>
     </head>
     <body>
+        <div class="container">
 
+            <div class "row">
+                <div class="col-sx-3"></div>
+                <div class="col-sx-6">
+                    <h1 class="text-center">Enter your word to find your score</h1>
+                    <hr>
+                </div>
+                <div class="col-sx-3"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-4"></div>
+
+                <div class="col-xs-4">
+                    <div class= "form-group">
+                        <label for="word">Enter a word:</label>
+                        <input id="word" name="word" class="form-control" type="text" placeholder="Check Scrabble Score">
+                        <button type="submit" class=" btn btn-primary btn-block">Check</button>
+                    </div>
+                </div>
+                <div class="col-xs-4"></div>
+            </div>
+        </div>
     </body>
 </html>
