--- a/views/results.twig
+++ b/views/results.twig
@@ -2,9 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <title>ScrabbleScore</title>
     </head>
     <body>
+        
 
     </body>
 </html>
