--- a/views/checker.twig
+++ b/views/checker.twig
@@ -4,30 +4,44 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <title>ScrabbleScore</title>
+        <style>
+        .jumbotron {
+            position: relative;
+            background: #000 url("https://in.momath.org/sites/default/files/civicrm/persist/contribute/images/Scrabble%20Pieces.jpeg") center center;
+            width: 100%;
+            height: 100%;
+            background-size: contain;
+            overflow: hidden;
+        }
+        </style>
     </head>
     <body>
+    <div class="jumbotron">
         <div class="container">
 
-            <div class "row">
-                <div class="col-sx-3"></div>
+            <div class="row">
+                <div class="col-xs-3"></div>
                 <div class="col-sx-6">
-                    <h1 class="text-center">Enter your word to find your score</h1>
+                    <h1 style="color:white" class="text-center">Enter your word to find your score</h1>
                     <hr>
                 </div>
-                <div class="col-sx-3"></div>
+                <div class="col-xs-3"></div>
             </div>
             <div class="row">
                 <div class="col-xs-4"></div>
 
                 <div class="col-xs-4">
                     <div class= "form-group">
-                        <label for="word">Enter a word:</label>
+                        <label for="word" style="color:white">Enter a word:</label>
                         <input id="word" name="word" class="form-control" type="text" placeholder="Check Scrabble Score">
                         <button type="submit" class=" btn btn-primary btn-block">Check</button>
                     </div>
                 </div>
                 <div class="col-xs-4"></div>
             </div>
+
+            </div>
         </div>
+    </div>
     </body>
 </html>
